--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,13 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #ff8a1c,
+  secondary:  #ffb71c,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
